# cassandra-ops-mcp

./: .dockerignore  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml.example
docs/: api_usage_guide.md  deployment_guide.md  logging_guide.md
examples/: README.md  backup_automation.py  basic_usage.py  health_monitoring.py  mcp_client_example.py
scripts/: start.sh  stop.sh
src/: __init__.py  authentication.py  command_registry.py  config_manager.py  health_check.py  interfaces.py  logging_config.py  main.py  mcp_server.py  models.py  nodetool_executor.py
tests/: __init__.py  test_authentication.py  test_command_registry.py  test_health_check.py  test_integration.py  test_logging_config.py  test_mcp_server.py  test_nodetool_executor.py
